--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "shikamaro",
   "version": "0.1.0",
+  "homepage": "https://indexhui.github.io/shikamaro/",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.1.6",
@@ -10,16 +11,21 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.6.2",
     "framer-motion": "^3.2.1",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "react-scroll-parallax": "^2.3.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
