--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shikamaro",
   "version": "0.1.0",
-  "homepage": "https://indexhui.github.io/shikamaro/",
+  "homepage": "https://shiromaro.studio/",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.1.6",
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp CNAME build/CNAME",
     "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
