--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://shiromaro.studio/",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.1.6",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
@@ -12,10 +13,12 @@
     "@testing-library/user-event": "^12.6.2",
     "framer-motion": "^3.2.1",
     "gh-pages": "^3.1.0",
+    "merge-images": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll-parallax": "^2.3.5",
     "web-vitals": "^0.2.4"
